Updated styles and added social media links

--- a/public/index.html
+++ b/public/index.html
@@ -2,82 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="images/galaxy_icon_16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/galaxy_icon_32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/galaxy_icon_96.png">
+    <link rel="icon" type="image/png" sizes="150x150" href="images/galaxy_icon_150.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="surgalxy" content="Web site created using create-react-app" />
-    <link rel="icon" type="image/png" href="images/galaxy_icon.png">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <!-- Manifest for PWA -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your global stylesheet -->
     <title>surgalxy</title>
-    <!-- Internal CSS for simplicity -->
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            font-size: 16px;
-            line-height: 1.6;
-            color: #ffffff;
-            background-color: #000000;
-            margin: 0;
-            padding: 0;
-        }
-
-        h1, h2, h3, h4, h5, h6 {
-            font-family: 'Orbitron', sans-serif;
-            color: #ffcc00;
-        }
-
-        h1 {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-        }
-
-        h2 {
-            font-size: 2.5rem;
-            margin-bottom: 0.75rem;
-        }
-
-        .button {
-            font-family: 'Orbitron', sans-serif;
-            background-color: #ffcc00;
-            color: #000;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            text-transform: uppercase;
-        }
-
-        .button:hover {
-            background-color: #ffaa00;
-        }
-
-        header, footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #111;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        section {
-            margin-bottom: 20px;
-        }
-
-        p, ul {
-            margin: 0 0 1rem 0;
-        }
-    </style>
 </head>
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
         <header>
-            <h1>Welcome to Surgalxy</h1>
+            <h1>Welcome to surgalxy</h1>
             <h2>Exploring House Music and the Cosmos</h2>
         </header>
         <main>
@@ -91,6 +34,11 @@
         </main>
         <footer>
             <p>&copy; 2024 Surgalxy. All rights reserved.</p>
+            <div>
+                <a href="https://www.tiktok.com/@surgalxy" target="_blank" rel="noopener noreferrer">TikTok</a>
+                <a href="https://twitter.com/surgalxy" target="_blank" rel="noopener noreferrer">Twitter</a>
+                <a href="https://www.instagram.com/surgalxy" target="_blank" rel="noopener noreferrer">Instagram</a>
+            </div>
         </footer>
     </div>
 </body>
